--- a/WarHook Recode.vcxproj
+++ b/WarHook Recode.vcxproj
@@ -88,6 +88,7 @@
     <ProjectGuid>{10f86bf4-9eed-4998-a73f-afb49db39149}</ProjectGuid>
     <RootNamespace>WarHookRecode</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
+    <ProjectName>warhook</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
